[gd_scene load_steps=26 format=2]

[ext_resource path="res://scenes/ui/resource_slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ui/hud.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/ui_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/images/ui_icons.png" type="Texture" id=4]
[ext_resource path="res://assets/images/score_divide_pollution.png" type="Texture" id=5]
[ext_resource path="res://assets/images/score_divide_money.png" type="Texture" id=6]
[ext_resource path="res://scenes/game_timer.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 128, 128 )
margin = Rect2( 5, 5, 10, 10 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 128, 128 )
margin = Rect2( 5, 5, 10, 10 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.580392, 0.823529, 0.996078, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 128, 128 )
margin = Rect2( 5, 5, 10, 10 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 128, 128 )
margin = Rect2( 5, 5, 10, 10 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 128, 128 )
margin = Rect2( 5, 5, 10, 10 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 128, 128 )
margin = Rect2( 5, 5, 10, 10 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id=18]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 0.08
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLeft" parent="Header" instance=ExtResource( 7 )]

[node name="ButtonSections" type="HBoxContainer" parent="Header"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseSection" type="HBoxContainer" parent="Header/ButtonSections"]
margin_right = 336.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PauseButton" type="TextureButton" parent="Header/ButtonSections/PauseSection"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
grow_horizontal = 2
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Pause Game"
size_flags_vertical = 3
texture_normal = SubResource( 14 )
texture_pressed = SubResource( 14 )
texture_hover = SubResource( 15 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolSection" type="HBoxContainer" parent="Header/ButtonSections"]
margin_left = 340.0
margin_right = 676.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="SelectButton" type="TextureButton" parent="Header/ButtonSections/ToolSection"]
margin_left = 82.0
margin_right = 122.0
margin_bottom = 40.0
grow_horizontal = 2
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Select"
size_flags_vertical = 3
texture_normal = SubResource( 5 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected" type="Panel" parent="Header/ButtonSections/ToolSection/SelectButton"]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyLandButton" type="TextureButton" parent="Header/ButtonSections/ToolSection"]
margin_left = 126.0
margin_right = 166.0
margin_bottom = 40.0
grow_horizontal = 2
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Buy Land"
size_flags_vertical = 3
texture_normal = SubResource( 6 )
texture_pressed = SubResource( 6 )
texture_hover = SubResource( 10 )
expand = true
stretch_mode = 5

[node name="Selected" type="Panel" parent="Header/ButtonSections/ToolSection/BuyLandButton"]
visible = false
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildButton" type="TextureButton" parent="Header/ButtonSections/ToolSection"]
margin_left = 170.0
margin_right = 210.0
margin_bottom = 40.0
grow_horizontal = 2
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Build"
size_flags_vertical = 3
texture_normal = SubResource( 7 )
texture_pressed = SubResource( 7 )
texture_hover = SubResource( 11 )
expand = true
stretch_mode = 5

[node name="Selected" type="Panel" parent="Header/ButtonSections/ToolSection/BuildButton"]
visible = false
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DestroyButton" type="TextureButton" parent="Header/ButtonSections/ToolSection"]
margin_left = 214.0
margin_right = 254.0
margin_bottom = 40.0
grow_horizontal = 2
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Destroy"
size_flags_vertical = 3
texture_normal = SubResource( 8 )
texture_pressed = SubResource( 8 )
texture_hover = SubResource( 12 )
expand = true
stretch_mode = 5

[node name="Selected" type="Panel" parent="Header/ButtonSections/ToolSection/DestroyButton"]
visible = false
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopSection" type="HBoxContainer" parent="Header/ButtonSections"]
margin_left = 680.0
margin_right = 1016.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="ShopButton" type="TextureButton" parent="Header/ButtonSections/ShopSection"]
pause_mode = 2
margin_left = 296.0
margin_right = 336.0
margin_bottom = 40.0
grow_horizontal = 2
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Resource Shop"
size_flags_vertical = 3
texture_normal = SubResource( 16 )
texture_pressed = SubResource( 16 )
texture_hover = SubResource( 17 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Footer" type="Panel" parent="."]
anchor_left = 0.2
anchor_top = 0.92
anchor_right = 0.8
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FooterItems" type="HBoxContainer" parent="Footer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceSlotsLeft" type="HBoxContainer" parent="Footer/FooterItems"]
margin_right = 192.0
margin_bottom = 48.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="ResourceSlot1" parent="Footer/FooterItems/ResourceSlotsLeft" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 48.0
margin_bottom = 48.0

[node name="ResourceSlot2" parent="Footer/FooterItems/ResourceSlotsLeft" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_right = 96.0
margin_bottom = 48.0

[node name="ResourceSlot3" parent="Footer/FooterItems/ResourceSlotsLeft" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 96.0
margin_right = 144.0
margin_bottom = 48.0

[node name="ResourceSlot4" parent="Footer/FooterItems/ResourceSlotsLeft" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 144.0
margin_right = 192.0
margin_bottom = 48.0

[node name="Placeholder" type="Control" parent="Footer/FooterItems"]
margin_left = 192.0
margin_right = 422.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScoreVisual" type="TextureProgress" parent="Footer/FooterItems/Placeholder"]
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 1.0
step = 0.0
value = 1.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="Panel" parent="Footer/FooterItems/Placeholder"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyBackground" type="Panel" parent="Footer/FooterItems/Placeholder"]
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.7
margin_left = -75.0
margin_top = -75.0
margin_right = 75.0
margin_bottom = 75.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" type="Label" parent="Footer/FooterItems/Placeholder/MoneyBackground"]
anchor_left = 0.5
anchor_top = 0.35
anchor_right = 0.5
anchor_bottom = 0.35
margin_left = -100.0
margin_top = -28.5
margin_right = 100.0
margin_bottom = 28.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "$100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceSlotsRight" type="HBoxContainer" parent="Footer/FooterItems"]
margin_left = 422.0
margin_right = 614.0
margin_bottom = 48.0
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 2

[node name="ResourceSlot1" parent="Footer/FooterItems/ResourceSlotsRight" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 48.0
margin_bottom = 48.0
custom_styles/panel = SubResource( 2 )

[node name="ResourceSlot2" parent="Footer/FooterItems/ResourceSlotsRight" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_right = 96.0
margin_bottom = 48.0

[node name="ResourceSlot3" parent="Footer/FooterItems/ResourceSlotsRight" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 96.0
margin_right = 144.0
margin_bottom = 48.0

[node name="ResourceSlot4" parent="Footer/FooterItems/ResourceSlotsRight" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 144.0
margin_right = 192.0
margin_bottom = 48.0

[node name="ScoreUpdateTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="pressed" from="Header/ButtonSections/PauseSection/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Header/ButtonSections/ToolSection/SelectButton" to="." method="_on_SelectButton_pressed"]
[connection signal="pressed" from="Header/ButtonSections/ToolSection/BuyLandButton" to="." method="_on_BuyLandButton_pressed"]
[connection signal="pressed" from="Header/ButtonSections/ToolSection/BuildButton" to="." method="_on_BuildButton_pressed"]
[connection signal="pressed" from="Header/ButtonSections/ToolSection/DestroyButton" to="." method="_on_DestroyButton_pressed"]
[connection signal="pressed" from="Header/ButtonSections/ShopSection/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="timeout" from="ScoreUpdateTimer" to="." method="_on_ScoreUpdateTimer_timeout"]
